--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <text style="font-family:Sans-serif;"><b>PERSONAL INFORMATION</b></text>
     <hr>
     <p><b>Date of Birth: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-         January 22 2003</b></p>
+         January 22<sup>nd</sup> 2003</b></p>
 
          
     <p><b>Maritial Status: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
