--- a/index.html
+++ b/index.html
@@ -71,16 +71,20 @@
         <text style="font-family:Sans-serif;"><b>KEY SKILLS</b></text>
         <hr>
 
-    <ul>
-        <li><b>Hardworking</b></li>
-        <li><b>Self Motivated</b></li>
-        <li><b>Leading skills</b></li>
-        <li><b>Time Management</b></li>
-        <li><b>Quick Learner</b></li>
-        <li><b>Observational Skills</b></li>
-        <li><b>Active</b></li>
-        <li><b>Communication Skills</b></li>
-    </ul>
+    <table border="1" align="center">
+        <tr>
+          <td style="column-width: 200px; height: 40px;" align="center">Self Motivated</td>
+          <td style="column-width: 200px; height: 40px;" align="center">Hardworking</td>
+          <td style="column-width: 200px;" align="center">Communication</td>
+          <td style="column-width: 200px;" align="center">Quick Learner</td>
+        </tr>
+        <tr>
+          <td style="column-width: 200px; height: 40px;" align="center">Determined</td>
+          <td style="column-width: 200px;" align="center">Leading Abilities</td>
+          <td style="column-width: 200px;" align="center">Time Management</td>
+          <td style="column-width: 200px;" align="center">Active</td>
+        </tr>
+      </table>
 
 </body>
 </html>
